Bug 271671 - Paning zoomed image leads to slight corruption
Summary: Paning zoomed image leads to slight corruption
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.08.2
Platform: Gentoo Packages Linux
: VHI major
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords:
: 324559 330332 333165 344122 427369 429754 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-04-25 09:23 UTC by Māris Nartišs
Modified: 2021-05-11 15:29 UTC (History)
12 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Picture with marked corruption after paning around (56.93 KB, image/png)
2011-04-25 09:23 UTC, Māris Nartišs
Details
zoomed image corruption after panning (69.10 KB, image/png)
2012-09-06 03:29 UTC, ZH
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Māris Nartišs 2011-04-25 09:23:23 UTC
Created attachment 59294 [details]
Picture with marked corruption after paning around

Version:           2.6 (using KDE 4.6.2) 
OS:                Linux

Open any image with vertical lines. Zoom in to non x00% (i.e. 233%). Pan around image and see how stright vertical lines get corrupted.

Sample image: http://upload.wikimedia.org/wikipedia/commons/5/50/Signal_Sampling.png


Reproducible: Always
Comment 1 ZH 2012-09-06 03:29:56 UTC
Created attachment 73693 [details]
zoomed image corruption after panning

I can confirm it.
Using Gwenview 2.9.0 with KDE 4.9.00 on openSUSE 12.2 i586.
Comment 2 Błażej Szczygieł 2013-03-18 21:55:41 UTC
It still happens on KDE 4.10.1. It's very annoying bug :(
Comment 3 Christoph Feck 2013-12-29 17:26:23 UTC
*** Bug 324559 has been marked as a duplicate of this bug. ***
Comment 4 Christoph Feck 2014-01-23 17:44:05 UTC
*** Bug 330332 has been marked as a duplicate of this bug. ***
Comment 5 Christoph Feck 2014-04-07 22:15:06 UTC
*** Bug 333165 has been marked as a duplicate of this bug. ***
Comment 6 Christoph Feck 2015-02-13 18:26:55 UTC
*** Bug 344122 has been marked as a duplicate of this bug. ***
Comment 7 Christoph Feck 2020-11-01 13:16:11 UTC
*** Bug 427369 has been marked as a duplicate of this bug. ***
Comment 8 kndevl 2020-11-05 07:50:43 UTC
Reproducible on 

Linux 5.4.74-1-lts
KDE Frameworks 5.75.0
Qt 5.15.1 (built against 5.15.1)
Plasma 5.20.2-1

Disabling / switching animations to Software / OpenGL does not fix it
Comment 9 Christoph Feck 2020-11-28 16:18:12 UTC
*** Bug 429754 has been marked as a duplicate of this bug. ***
Comment 10 Daniel Ribas 2020-12-14 23:02:07 UTC
KDE Frameworks 5.77.0
Qt 5.15.2 (built against 5.15.2)
Plasma 5.20.4

I can confirm this bug but only when opening images with alpha transparency, if I convert the image to an image without alpha channel this problems disappears.
Comment 11 Bug Janitor Service 2021-05-06 10:57:52 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/gwenview/-/merge_requests/66
Comment 12 Nate Graham 2021-05-11 15:29:28 UTC
Git commit 726c52998c50252fe2ce74c1ba63e52c3355a18a by Nate Graham, on behalf of Arjen Hiemstra.
Committed on 11/05/2021 at 15:24.
Pushed by ngraham into branch 'master'.

Use a simple QGraphicsItem subclass for drawing raster images

RasterImageView was using a custom implementation that would use two
QPixmaps to do double buffered rendering. However, since Qt already
renders things double buffered, we are doing duplicate work. So drop
that and use a simple QGraphicsItem subclass that paints the loaded
image directly. This simplifies things a lot and removes a fair amount
of difficult to follow custom code.

M  +146  -248  lib/documentview/rasterimageview.cpp
M  +2    -4    lib/documentview/rasterimageview.h

https://invent.kde.org/graphics/gwenview/commit/726c52998c50252fe2ce74c1ba63e52c3355a18a